[package]
name = "paste"
version = "1.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>", "The Butler Group LLC <support@butlergroup.net>"]
categories = ["development-tools", "no-std", "no-std::no-alloc"]
description = "Macros for all your token pasting needs. Maintained, drop-in replacement for paste."
documentation = "https://docs.rs/paste"
edition = "2018"
keywords = ["macros", "paste"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/butlergroup/paste"

[lib]
proc-macro = true

[dependencies]
paste-test-suite = { version = "0", path = "tests/macros" }
rustversion = "1.0.22"
trybuild = { version = "1.0.112", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
