[package]
name = "macro_paste"
version = "1.1.4"
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "The Butler Group LLC <dev@butlergroup.net>",
]
categories = [
    "development-tools",
    "development-tools::procedural-macro-helpers",
    "data-structures",
]
description = "Macros for all your token pasting needs. Maintained, drop-in replacement for paste."
documentation = "https://docs.rs/macro_paste"
edition = "2021"
keywords = ["macros", "macro", "paste", "ident", "concat"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/butlergroup/macro_paste"

[lib]
proc-macro = true

[features]
protocol_feature_macro_paste = []
protocol_feature_paste = ["protocol_feature_macro_paste"]

[dependencies]
rustversion = "1.0.22"
trybuild = { version = "1.0.116", features = ["diff"] }

[dev-dependencies]
paste-test-suite = { path = "tests/macros" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
